src/generate/snapshots/bevy_state_plugin_generator__generate__tests__error_handling@overlapping_Full.snap
---
source: src/generate/tests.rs
expression: "generate_all_type_definitions(node, naming_scheme)"
---
Ok(
    [
        "Root -> Root",
        "Root -> RootRoot",
        "A -> RootA",
        "A -> RootRootA",
    ],
)
