src/generate/snapshots/bevy_state_plugin_generator__generate__tests__error_handling@overlapping_None.snap
---
source: src/generate/tests.rs
expression: "generate_all_type_definitions(vec![node], naming_scheme, None)"
---
Err(
    Processing(
        DuplicateName {
            resolved_name: "Root",
            original_name: "Root",
        },
    ),
)
