src/generate/snapshots/bevy_state_plugin_generator__generate__tests__format_source@formatted_rustfmt.snap
---
source: src/generate/tests.rs
expression: formatted
---
fn main() {
    println!("Hello, world!");
}
