src/generate/snapshots/bevy_state_plugin_generator__generate__tests__generate_debug_info@root.txt.snap
---
source: src/generate/tests.rs
expression: "generate_debug_info(src_path, source)"
---
// generated by bevy_state_plugin_generator v1.1.0-alpha.1
// src: root.txt
// RootState
