src/generate/snapshots/bevy_state_plugin_generator__generate__tests__generate_full_source@mixed-nested-states.txt.snap
---
source: src/generate/tests.rs
expression: "generate_state_plugin_source(src_path, source,\nplugin_config).unwrap_or_else(identity)"
---
// generated by bevy_state_plugin_generator v1.2.0-alpha-l
// src: mixed-nested-states.txt
// A { B [C[ } D { E F [ G H ] I }

#![allow(missing_docs)]
use bevy::prelude::AppExtStates;
pub mod states {
    use bevy::prelude::StateSet;
    #[derive(bevy::prelude::States, Hash, Default, Debug, Clone, PartialEq, Eq)]
    pub enum GameState {
        #[default]
        A,
    }

    #[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
    #[source(GameState = GameState::A)]
    pub struct GameStateA;
}
pub struct GeneratedStatesPlugin;
impl bevy::app::Plugin for GeneratedStatesPlugin {
    fn build(&self, app: &mut bevy::app::App) {
        app.init_state::<states::GameState>();
    }
}
